--- a/account-details/package.json
+++ b/account-details/package.json
@@ -3,28 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.8.1",
-    "date-fns": "^4.1.0",
-    "rc-pagination": "^5.1.0",
-    "react": "^19.0.0",
-    "react-datepicker": "^8.1.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "axios": "1.6.2",
+    "date-fns": "2.30.0",
+    "rc-pagination": "3.7.0",
+    "react": "18.2.0",
+    "react-datepicker": "4.21.0",
+    "react-dom": "18.2.0",
+    "react-scripts": "5.0.1",
+    "react-text-mask": "^5.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx}",
+    "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,scss}"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -40,7 +38,7 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.85.1",
-    "sass-loader": "^16.0.5"
+    "sass": "1.69.5",
+    "sass-loader": "13.3.2"
   }
-} 
+}
