--- a/account-details/package.json
+++ b/account-details/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "1.6.2",
+    "chart.js": "^4.4.8",
     "date-fns": "2.30.0",
     "rc-pagination": "3.7.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "4.21.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
